# slug-sfr

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  ubuntu_amd_config.cmake  ubuntu_config.cmake
src/: CMakeLists.txt  rng.cpp  sfr.cpp  sfr.h  slug_bench.cpp  slug_object.cpp  slug_object.h  slug_wrapper.cpp  slug_wrapper.h
